# pitool

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  Taskfile.yml  main.py  pitool  pitool.example.yml  pyproject.toml
src/: __init__.py  paths.py  utils.py
src/config/: loader.py  models.py  passwd.py
src/imaging/: __init__.py  cloudinit.py  create_image.py  downloader.py  flasher.py  models.py
src/networking/: __init__.py  cert_trust.py  connect.py  pi_tool.py
src/platform/: __init__.py  base.py  macos.py  models.py
templates/: bootstrap.sh.template  firstrun.sh.template  network-config.j2  user-data.j2
